[metadata]
name = here_debugger
version = 0.0.3
author = Bibhash Ghosh
author_email = tranceispermanemt@gmail.com
description = A user friendly debugger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bibhash7/Here-Debugger
project_urls =
    Bug Tracker = https://github.com/Bibhash7/Here-Debugger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
